[tool.poetry]
name = "simple-mars-rover"
version = "0.1.0"
description = ""
authors = ["Mark Ashfield <mark.ashfield@codurance.com>"]
readme = "README.md"
packages = [{include = "simple_mars_rover"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
